--- a/sections/contexts-and-user-metrics.tex
+++ b/sections/contexts-and-user-metrics.tex
@@ -58,8 +58,7 @@ Given a context $C$ containing user $u$, we define:
 \mathit{F2}(u)& \text{: Number of followees of $u$}
 \end{align*}
 %
-
-Note that, given $C$, we can evaluate some of the features above with respect to either $P(C)$ or  $\Tilde{P}(C)$ independently from each other, that is, we can consider an ``on-context'' and an ``off-context'' version of each feature, with the exception of \mathit{F1} and \mathit{F2} which are context-independent.
+Note that, given $C$, we can evaluate some of the features above with respect to either $P(C)$ or  $\Tilde{P}(C)$ independently from each other, that is, we can consider an ``on-context'' and an ``off-context'' version of each feature, with the exception of $\mathit{F1}$ and $\mathit{F2}$ which are context-independent.
 %
 For example, we are going to write $R1_{on}(u)$ to denote the number of context retweets and $R1_{\mathit{off}}(u)$ the number of out-of-context retweets by $u$, i.e., these are retweets that occur within $C$'s spatio-temporal boundaries, but do not contain any of the hashtags or keywords that define $C$.  
 %
