--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -93,6 +93,6 @@ This however requires substantial a priori ground truth, making this approach im
 % 	- one single large event
 % 	- no breakdown into communities
 % }\\
-\anote{Differently from the majority of the influencer ranking algorithms, in \cite{Schenk2011} a topic-specific influencer ranking is proposed. First it harvests sequentially timed snapshots of the network of users related to a topic. Then it ranks the users based on the number of followers gained and lost in the considered snapshots.}\\
+\anote{FLAVIO: Differently from the majority of the influencer ranking algorithms, in \cite{Schenk2011} a topic-specific influencer ranking is proposed. First it harvests sequentially timed snapshots of the network of users related to a topic. Then it ranks the users based on the number of followers gained and lost in the considered snapshots.}\\
 
 \anote{FLAVIO: In \cite{Bizid:2015:PUD:2808797.2809411} a model for identifying ``prominent users'' regarding a specific topic event in Twitter is presented. Prominent users are defined as those who focus their attention and communication on the aforementioned topic event. Users are described with a real-time computed feature vector among which considers on-topic and off-topic users activity over Twitter. As for~\cite{Biran2012} problems of scalability and adaptability arise as 2 supervised learning methods are used, one to discriminate prominent users from the rest and the other to rank them.}\\
