--- a/icwe19.bib
+++ b/icwe19.bib
@@ -57,7 +57,7 @@
     keywords  = "Events in Twitter,Key user identification,On- and off-topic features,Real-time feature computation,SVM Classification and Ranking"
 }
 @ARTICLE {IJoC1246,
-    author   = "Gilad Lotan and Erhardt Graeff and Mike Ananny and Devin Gaffney and Ian Pearce and danah boyd",
+    author   = "Gilad Lotan and Erhardt Graeff and Mike Ananny and Devin Gaffney and Ian Pearce and Danah Boyd",
     title    = "The Arab Spring| The Revolutions Were Tweeted: Information Flows during the 2011 Tunisian and Egyptian Revolutions",
     journal  = "International Journal of Communication",
     year     = "2011",
@@ -140,8 +140,8 @@
     acmid     = "2390379"
 }
 @ARTICLE {MATIC2011,
-    author  = "Booth, Norman and Ann Matic, Julie",
-    title   = "Matic, J.A.: Mapping and Leveraging Influencers in Social Media to Shape Corporate Brand Perceptions. Corporate Communications 16, 184-191",
+    author  = "Booth, Norman and Matic, Julie Ann",
+    title   = "Mapping and Leveraging Influencers in Social Media to Shape Corporate Brand Perceptions. Corporate Communications 16, 184-191",
     journal = "Corporate Communications: An International Journal",
     year    = "2011",
     volume  = "16",
@@ -198,7 +198,7 @@
     publisher = "Routledge"
 }
 @ARTICLE {Lotan2011,
-    author  = "Gilad Lotan and Erhardt Graeff and Mike Ananny and Devin Gaffney and Ian Pearce and danah boyd",
+    author  = "Gilad Lotan and Erhardt Graeff and Mike Ananny and Devin Gaffney and Ian Pearce and Danah Boyd",
     title   = "The Arab Spring| The Revolutions Were Tweeted: Information Flows during the 2011 Tunisian and Egyptian Revolutions",
     journal = "International Journal of Communication",
     year    = "2011",
@@ -347,7 +347,7 @@
     doi     = "10.1038/ncomms10168"
 }
 @INBOOK {Fisher2017,
-    author    = "Fisher, David N.and Silk, Matthew J.and Franks, Daniel W.",
+    author    = "Fisher, David N. and Silk, Matthew J. and Franks, Daniel W.",
     title     = "The Perceived Assortativity of Social Networks: Methodological Problems and Solutions",
     publisher = "Springer International Publishing",
     year      = "2017",
@@ -359,7 +359,7 @@
     doi       = "10.1007/978-3-319-53420-6\_1"
 }
 @ARTICLE {INFOMAP,
-    author  = "Rosvall, Martin and T Bergstrom, Carl",
+    author  = "Rosvall, Martin and Bergstrom, Carl T.",
     title   = "Maps of Random Walks on Complex Networks Reveal Community Structure",
     journal = "Proceedings of the National Academy of Sciences of the United States of America",
     year    = "2008",
