--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -55,7 +55,7 @@ Secondly, we have implemented a comprehensive set of content-based metrics that 
 User profiles are updated when they are repeatedly found in multiple contexts.
 
 Lastly, for empirical evaluation of our implementation, we demonstrate an operational definition of the activist profile, defined in terms of the features available in the database, by collecting about 3,500 users  across 25 contexts in the domain of healthcare awareness campaigns in the UK during 2018. 
-The application of the approach to the specific challenge of combating tropical disease epidemics in Brasil is currently in progress and is not reported in this paper.
+The application of the approach to the specific challenge of combating tropical disease epidemics in Brazil is currently in progress and is not reported in this paper.
 
 \subsection{Related Work}  \label{sec:related}
 
