--- a/tables/ranks-extended.tex
+++ b/tables/ranks-extended.tex
@@ -5,7 +5,7 @@
 \multicolumn{1}{|c|}{\textbf{\#}} & \textbf{User} & \textbf{Type} & \textbf{Description} & \textbf{User} & \textbf{Type} & \textbf{Description} \\ \hline
 \multicolumn{1}{|c|}{1} & homesnutrition & in-topic association & Promote examples of good nutrition in nursing homes & johnneustadt & in-topic individual & Naturopathic physician which is very active in NHS related events \\ \hline
 \multicolumn{1}{|c|}{2} & ficajones & in-topic individual & Ward manager & jo\_millar27 & in-topic individual & Ordinary person that mostly retweets NHS related news \\ \hline
-\multicolumn{1}{|c|}{3} & helenvweaver & in-topic individual & Neuro physiotherapist & hatchbrenner & off-topic association & Legal advice \\ \hline
+\multicolumn{1}{|c|}{3} & helenvweaver & in-topic individual & Neuro physiotherapist & hatchbrenner & off-topic association & Legal advice firm \\ \hline
 \multicolumn{1}{|c|}{4} & spriggsnutri & in-topic association & Nutritional therapy & nchawkes & in-topic individual & Consultant Clinical Psychologist in Eating Disorders \\ \hline
 \multicolumn{1}{|c|}{5} & critcarelthtr & in-topic association & Critical care in Preston & moz0373runner & in-topic individual & Fundraiser for NHS related events \\ \hline
 \multicolumn{1}{|c|}{6} & danielleroisin\_ & in-topic individual & Ordinary person that mostly retweets NHS related news & aimsonhealth & in-topic individual & Health student which has a website and social account pages dedicated to NHS topics \\ \hline
