--- a/tables/ranks.tex
+++ b/tables/ranks.tex
@@ -1,16 +1,17 @@
-\begin{tabular}{|P{0.6cm}|p{2.4cm}|p{2.4cm}|}
+\begin{tabular}{P{0.6cm}|p{2.4cm}|p{2.8cm}|p{2.4cm}|p{2.8cm}|}
 
-\hline
-\textbf{\#} & \textbf{Rank 1} & \textbf{Rank 2} \\ \hline
-1 & homesnutrition & johnneustadt \\ \hline
-2 & ficajones & jo\_millar27 \\ \hline
-3 & helenvweaver & hatchbrenner \\ \hline
-4 & spriggsnutri & nchawkes \\ \hline
-5 & critcarelthtr & moz0373runner \\ \hline
-6 & danielleroisin\_ & aimsonhealth \\ \hline
-7 & mynameisandyj & wordsharkv5 \\ \hline
-8 & fionaliu92 & fullcircle\_play \\ \hline
-9 & ldpartnership & qsprivatehealth \\ \hline
-10 & milaestevam1 & socialissp \\ \hline
+\cline{2-5}
+\multicolumn{1}{l|}{} & \multicolumn{2}{c|}{\textbf{Rank 1}} & \multicolumn{2}{c|}{\textbf{Rank 2}} \\ \hline
+\multicolumn{1}{|c|}{\textbf{\#}} & \textbf{User} & \textbf{Type} & \textbf{User} & \textbf{Type} \\ \hline
+\multicolumn{1}{|c|}{1} & homesnutrition & in-topic association & johnneustadt & in-topic individual \\ \hline
+\multicolumn{1}{|c|}{2} & ficajones & in-topic individual & jo\_millar27 & in-topic individual \\ \hline
+\multicolumn{1}{|c|}{3} & helenvweaver & in-topic individual & hatchbrenner & off-topic association \\ \hline
+\multicolumn{1}{|c|}{4} & spriggsnutri & in-topic association & nchawkes & in-topic individual \\ \hline
+\multicolumn{1}{|c|}{5} & critcarelthtr & in-topic association & moz0373runner & in-topic individual \\ \hline
+\multicolumn{1}{|c|}{6} & danielleroisin\_ & in-topic individual & aimsonhealth & in-topic individual \\ \hline
+\multicolumn{1}{|c|}{7} & mynameisandyj & in-topic individual & wordsharkv5 & off-topic individual \\ \hline
+\multicolumn{1}{|c|}{8} & fionaliu92 & in-topic individual & fullcircle\_play & in-topic association \\ \hline
+\multicolumn{1}{|c|}{9} & ldpartnership & in-topic association & qsprivatehealth & in-topic association \\ \hline
+\multicolumn{1}{|c|}{10} & milaestevam1 & off-topic individual & socialissp & off-topic association \\ \hline
 
 \end{tabular}
